# AgentEvolver

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent_evolver/: __init__.py  config.py
agent_evolver/dashboard/: __init__.py  backend.py  diff_engine.py  publisher.py
agent_evolver/engine/: __init__.py  analyzer.py  candidate_store.py  evolver.py  patch.py  triggers.py  types.py
agent_evolver/protocol/: __init__.py  audit.py  mutation.py  sanitize.py
agent_evolver/proxy/: __init__.py  forwarder.py  recorder.py  server.py
agent_evolver/security/: __init__.py  path_guard.py  readonly_guard.py
agent_evolver/storage/: __init__.py  db.py  models.py  pattern_store.py  queries.py  semantic_queries.py  session_store.py
docs/: GUIDE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CandidateCard.tsx  DiffViewer.tsx  Navbar.tsx  StatusPill.tsx  ThemeToggle.tsx
frontend/src/pages/: CandidateDetail.tsx  CandidateList.tsx  MetricsPage.tsx
scripts/: seed_candidates.py  start_dashboard.sh  start_dashboard_frontend.sh  start_proxy.sh
tests/: conftest.py  test_candidate_lifecycle.py  test_no_production_write.py  test_proxy_transparent.py  test_publish_flow.py  test_semantic_pattern_mining.py
